# vial-gui

./: .gitignore  README.md  corne-v4-config.vil  pyproject.toml  requirements.txt  suprkey
.github/workflows/: main.yml  test.yml
src/main/python/: tabbed_keycodes.py
src/main/python/protocol/: keyboard_comm.py
src/main/python/test/: test_keyboard.py
util/linux-builder/: Dockerfile  _builder.sh
